# cs666

./: .env.example  .gitignore  HANDOFF.md  Makefile  README.md  conftest.py  pyproject.toml
config/: monitor_allowlist.yaml  rules_table_a.yaml  shared.yaml  steam_backtest_items.txt  system_a.yaml  system_b.yaml  trade_up_collections.yaml  universe_b.yaml
dashboard/: README.md  index.html
dashboard/scripts/: make-sample.mjs
dashboard/src/: App.tsx  theme.css  types.ts
dashboard_a/: app.py
docs/: RESEARCH_INDEX.md  Shared_Market-Fundamentals_Indicator-Library.md  System-A_Event-Driven_Reactive.md  System-B_Positional_Value-Trend.md  System-B_Research-Notes.md
research/: crash course.txt
src/shared/: backtest.py  breaks.py  bus.py  config.py  configuration.py  data.py  execution.py  feed.py  iflow_history.py  indicators.py  journal.py  ledger.py  provenance.py  regime.py  schema.py  signal_bus.py  steam_history.py  store.py  synthetic.py
src/shared_b/: __init__.py  backtest.py  collector.py  garch.py  indicators.py  regime.py
src/system_a/: anticipatory_study.py  engine.py  (+13 more)
tests/: test_anticipatory_study.py  test_backtest.py  test_backtest_integrity.py  test_collections.py  test_concentration.py  test_data_layer.py  test_event_study.py  test_execution_ledger.py  test_filters_risk.py  test_iflow_history.py  test_indicators.py  test_ledger.py  test_monitor.py  test_position_manager.py  test_reactive_engine.py  test_review_regressions.py  test_signals_indicators.py  test_spread_study.py  test_steam_history.py  test_strategy_e2e.py  test_trade_up_control.py
(+21 files in other folders)
