[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-quant"
version = "0.1.0"
description = "CS2 skin trading agents (Systems A & B) on BUFF163"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "pyyaml",
]

[project.optional-dependencies]
ml = ["xgboost"]
plot = ["matplotlib"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
